last shift layout fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,7 +37,8 @@ body {
 }
 
 main {
-  flex: 1; /* Allow the main content to grow and fill available space */
+  flex: 1 1 auto; /* Allow stable growth */
+  content-visibility: auto;
 }
 
 header,
